# aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  console  main.cpp
LICENSE.md/: LICENSE.md
SFML-2.3.2/include/SFML/: Graphics.hpp  Main.hpp  Network.hpp  OpenGL.hpp
SFML-2.3.2/include/SFML/Graphics/: Rect.hpp  RenderTarget.hpp  RenderWindow.hpp  Shader.hpp  Shape.hpp  VertexArray.hpp
SFML-2.3.2/include/SFML/Network/: Export.hpp  Ftp.hpp  Http.hpp  IpAddress.hpp  Packet.hpp  Socket.hpp  SocketHandle.hpp  SocketSelector.hpp  TcpListener.hpp  TcpSocket.hpp  UdpSocket.hpp
SFML-2.3.2/include/SFML/System/: String.hpp  Thread.hpp  ThreadLocalPtr.hpp  Utf.hpp
SFML-2.3.2/include/SFML/Window/: Event.hpp  Window.hpp
SFML/include/SFML/: Graphics.hpp  System.hpp  Window.hpp
SFML/include/SFML/System/: Clock.hpp
cmake/: FindSFML.cmake
project/include/: Brain.hpp  Button.hpp  Evolution.hpp  Food.hpp  Hexagon.hpp  Map.hpp  Neuron.hpp  Pixel.hpp
project/sourses/: Brain.cpp  Brain.hpp  Evolution.cpp  Map.cpp  NetworkFunction.hpp  Pixel.cpp  TrainAlgorithm.cpp
project/tests/: Brain_tests.cpp  Keyboard_test.cpp
src/: main.cpp
src/classes/: Brain.cpp  Brain.hpp  Button.hpp  CMakeLists.txt  Evolution.cpp  Evolution.hpp  Food.hpp  Hexagon.cpp  Hexagon.hpp  Keyboard.cpp  Map.cpp  Map.hpp  NetworkFunction.hpp  Pixel.cpp  Pixel.hpp  Poison.hpp  TrainAlgorithm.hpp  recordsNewStatistics
src/tests/: Brain_tests.cpp
workspace/projectSfml/: main.cpp
